[package]
name = "todo-cli-rs"
version = "0.1.1"
edition = "2021"
description = "This is a TODO CLI app."
author = "Stig Nervik"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.29"
